# qcow2-forensic

./: Cargo.toml  README.md  clippy.toml  mkdocs.yml
.github/workflows/: ci.yml  fuzz.yml
core/: Cargo.toml
core/src/: header.rs  lib.rs  refcount.rs  snapshots.rs  testutil.rs
core/tests/: corpus.rs  inspect.rs  real_images.rs
core/tests/data/: README.md
corpus/: fetch.sh
docs/: corpus-validation.md  implementation-notes.md  index.md  privacy.md  terms.md  validation.md
forensic/: Cargo.toml
forensic/src/: lib.rs
forensic/tests/: audit.rs  real_images.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_open/: cirros-0.6.3-x86_64-disk.img
fuzz/fuzz_targets/: fuzz_forensic.rs  fuzz_inspect.rs  fuzz_open.rs  fuzz_read.rs
qcow2/: Cargo.toml
qcow2/src/: error.rs  header.rs  lib.rs
qcow2/tests/: corpus.rs
tests/data/: README.md
