[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared identically by every member (DRY).
# Per-member-divergent fields (version, authors, description, documentation,
# keywords, categories, exclude) stay inline in each member.
[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/qcow2-forensic"
homepage = "https://github.com/SecurityRonin/qcow2-forensic"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `qcow2` version lives
# here too, so a bump touches one line instead of every member.
[workspace.dependencies]
qcow2 = { path = "core", version = "0.3.0", package = "qcow2-core" }
forensicnomicon = "0.3.1"
thiserror = "2"
flate2 = "1"
tempfile = "3"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Paranoid: production parsers must never panic on crafted input. Tests opt out
# via `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]`.
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
