[package]
name         = "qcow2-core"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only QCOW2 (QEMU Copy-On-Write v2/v3) disk image reader"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "qcow2", "disk-image", "qemu", "container"]
categories   = ["parser-implementations", "filesystem"]
repository   = "https://github.com/SecurityRonin/qcow2-forensic"
homepage     = "https://github.com/SecurityRonin/qcow2-forensic"
documentation = "https://docs.rs/qcow2-core"

# The crates.io name `qcow2` is taken (third-party), so we publish the reader as
# `qcow2-core` while keeping the ergonomic import path `use qcow2::…`.
[lib]
name = "qcow2"

[features]
test-helpers = []

[dependencies]
thiserror = "2"
flate2    = "1"

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[lints]
workspace = true
