[package]
name          = "qcow2-core"
version       = "0.3.1"
edition       = { workspace = true }
rust-version  = { workspace = true }
description   = "Pure-Rust read-only QCOW2 (QEMU Copy-On-Write v2/v3) disk image reader"
license       = { workspace = true }
authors       = ["Albert Hui"]
keywords      = ["forensics", "qcow2", "disk-image", "qemu", "container"]
categories    = ["parser-implementations", "filesystem"]
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = "https://docs.rs/qcow2-core"

# The crates.io name `qcow2` is taken (third-party), so we publish the reader as
# `qcow2-core` while keeping the ergonomic import path `use qcow2::…`.
# Keep the published package small: the real-image corpus + fuzz seeds are for
# local/CI validation only (the gated tests skip when absent).
exclude = ["/tests", "/fuzz", "/corpus", "/docs"]

[lib]
name = "qcow2"

[features]
test-helpers = []

[dependencies]
thiserror = { workspace = true }
flate2    = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
proptest  = { workspace = true }

[lints]
workspace = true
