[package]
name = "qcow2-forensic"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
description = "Forensic anomaly auditor for QCOW2 images — backing files, encryption, internal snapshots, dirty/corrupt feature bits as graded report::Finding, built on qcow2-core"
license = { workspace = true }
authors = ["Albert Hui <albert@securityronin.com>"]
keywords = ["forensics", "qcow2", "dfir", "disk-image", "qemu"]
categories = ["parser-implementations", "filesystem"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/qcow2-forensic"

[dependencies]
qcow2 = { workspace = true }
forensicnomicon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
