[package]
name    = "qcow2-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name  = "fuzz_open"
path  = "fuzz_targets/fuzz_open.rs"
test  = false
doc   = false

[dependencies]
libfuzzer-sys = "0.4"
qcow2         = { path = "../qcow2" }
tempfile      = "3"
